@@ -1,0 +1,11 @@
+/**
+	\file "main/prsim-main.h"
+	$Id: $
+ */
+#ifndef	__HAC_MAIN_PRSIM_MAIN_H__
+#define	__HAC_MAIN_PRSIM_MAIN_H__
+
+#include "main/global_options.h"
+#include "main/prsim.h"
+
+#endif	// __HAC_MAIN_PRSIM_MAIN_H__
